# catechol_solvent_selection

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pareto_front.csv  pyproject.toml  requirements.txt
data/featurization_look_ups/: acs_pca_descriptors_lookup.csv  drfps_catechol_lookup.csv  drfps_claisen_lookup.csv  drfps_lookup.csv  fragprints_lookup.csv  green_lookup.csv  smiles_lookup.csv  spange_descriptors_lookup.csv
data/full_data/: catechol_full_data_yields.csv  claisen_data_clean.csv
data/single_solvent/: catechol_single_solvent_yields.csv
kaggle_data/: README_KAGGLE.md  catechol-benchmark-metadata.json  mlcroissant.py  report_croissant-validation_Catechol Benchmark.md
results/full_data/: BaselineGPModel.csv  BaselineModel.csv  GPModel-indep-acs_pca_descriptors.csv  GPModel-indep-drfps.csv  GPModel-indep-drfps_catechol.csv  GPModel-indep-fragprints.csv  GPModel-indep-learnmean-spange_descriptors.csv  GPModel-indep-separated-spange_descriptors.csv  GPModel-indep-spange_descriptors.csv  GPModel-indep-warp-acs_pca_descriptors.csv  GPModel-indep-warp-drfps.csv  GPModel-indep-warp-drfps_catechol.csv  GPModel-indep-warp-fragprints.csv  GPModel-indep-warp-spange_descriptors.csv  GPModel-multi-acs_pca_descriptors.csv  GPModel-multi-drfps.csv  GPModel-multi-drfps_catechol.csv  GPModel-multi-fragprints.csv  GPModel-multi-spange_descriptors.csv  GPModel-multi-warp-acs_pca_descriptors.csv  GPModel-multi-warp-drfps.csv  GPModel-multi-warp-drfps_catechol.csv  GPModel-multi-warp-fragprints.csv  GPModel-multi-warp-spange_descriptors.csv  GPModel.csv  GPModel_indep_spange_descriptors.csv  LLMModel-chemberta-smiles.csv  LLMModel-rxnfp-smiles.csv  (+5 more)
scripts/: README.md  eval_active_learning.py  eval_active_learning_single_solvents.py  eval_bayes_opt.py  eval_graph.py  eval_mo_bayes_opt.py  eval_single_solvents.py  eval_solvent_ramps.py  eval_transfer_learning.py  featurize_graphs.py  featurize_solvents.py  graph_gp_regression.py  llm_regression.py  llm_regression_hpc.py  mlp_regression.py  np_regression.py  ode_regression.py  sanodep_training_loop.py  simple_ramp_regression.py  simple_regression.py  simple_regression_exp_ode.py  simple_regression_lode.py
(+469 files in other folders)
