[project]
name = "catechol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jose Pablo Folch", email = "jose@solvechemistry.com" }
]
requires-python = ">=3.11"
dependencies = [
    "botorch>=0.13.0",
    "numpy>=2.2.4",
    "torch>=2.6.0",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001"]
ignore = ["E721", "E731", "F722", "F821"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]


[project.scripts]
catechol = "catechol:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
