[project]
name = "catechol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jose Pablo Folch", email = "jose@solvechemistry.com" }
]
requires-python = ">=3.11"
dependencies = [
    "botorch>=0.13.0",
    "gauche>=0.1.6",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "rxnfp>=0.1.0",
    "scienceplots>=2.1.1",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]

[[tool.uv.dependency-metadata]]
# Manually override the rxnfp requirements to avoid conflicts 
# https://docs.astral.sh/uv/concepts/resolution/#dependency-metadata
name = "rxnfp"
requires-dist = ["simpletransformers"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001"]
ignore = ["E721", "E731", "F722", "F821"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]


[project.scripts]
catechol = "catechol:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
